# OgreAppBase

./: .gitignore  CMakeLists.txt  README.md
Source/Core/: Application.cpp  Application.h  CoreConfig.h.in
Source/Interface/Linux/: main.cpp
Source/Interface/MacOSX/: OSXCompat.h  OSXCompat.mm  main.mm
Source/Interface/Windows/: WinMain.cpp
